#
# $Id: Makefile.am,v 1.60 2001/12/14 17:49:55 valignat Exp $
#

MAINTAINERCLEANFILES = Makefile.in

SUBDIRS              = driver .

lib_LTLIBRARIES      = libnel3d.la

libnel3d_la_SOURCES  = anim_detail_trav.h \
                       animatable.h \
                       animated_lightmap.h \
                       animated_material.h \
                       animated_morph.h \
                       animated_value.h \
                       animation.h \
                       animation_playlist.h \
                       animation_set.h \
                       animation_set_user.h \
                       async_file_manager.h \
                       bezier_patch.h \
                       bone.h \
                       bone_user.h \
                       bsp_tree.h \
                       camera.h \
                       camera_user.h \
                       channel.h \
                       channel_mixer.h \
                       clip_trav.h \
                       cluster.h \
                       coarse_mesh_build.h \
                       coarse_mesh_manager.h \
                       computed_string.h \
                       deform_2d.h \
                       driver.h \
                       driver_material_inline.h \
                       driver_user.h \
                       dru.h \
                       event_mouse_listener.h \
                       fast_floor.h \
                       flare_model.h \
                       flare_shape.h \
                       font_generator.h \
                       font_manager.h \
                       heat_haze.h \
                       hrc_trav.h \
                       init_3d.h \
                       instance_group_user.h \
                       instance_material_user.h \
                       instance_user.h \
                       key.h \
                       landscape.h \
                       landscape_collision_grid.h \
                       landscape_def.h \
                       landscape_face_vector_manager.h \
                       landscape_model.h \
                       landscape_profile.h \
                       landscape_user.h \
                       landscape_vegetable_block.h \
                       landscapevb_allocator.h \
                       landscapevb_info.h \
                       light.h \
                       light_trav.h \
                       light_user.h \
                       load_balancing_trav.h \
                       material.h \
                       material_user.h \
                       mesh.h \
                       mesh_base.h \
                       mesh_base_instance.h \
                       mesh_geom.h \
                       mesh_instance.h \
                       mesh_morpher.h \
                       mesh_mrm.h \
                       mesh_mrm_instance.h \
                       mesh_multi_lod.h \
                       mesh_multi_lod_instance.h \
                       mini_col.h \
                       mot.h \
                       motion_blur.h \
                       mrm_builder.h \
                       mrm_internal.h \
                       mrm_mesh.h \
                       mrm_parameters.h \
                       nelu.h \
                       noise_value.h \
                       ordering_table.h \
                       particle_system.h \
                       particle_system_instance_user.h \
                       particle_system_model.h \
                       particle_system_process.h \
                       particle_system_shape.h \
                       patch.h \
                       patch_rdr_pass.h \
                       patchuv_locator.h \
                       play_list_manager.h \
                       play_list_manager_user.h \
                       play_list_user.h \
                       portal.h \
                       primitive_block.h \
                       ps_attrib.h \
                       ps_attrib_maker.h \
                       ps_attrib_maker_bin_op.h \
                       ps_attrib_maker_bin_op_include.h \
                       ps_attrib_maker_helper.h \
                       ps_attrib_maker_template.h \
                       ps_color.h \
                       ps_direction.h \
                       ps_edit.h \
                       ps_emitter.h \
                       ps_float.h \
                       ps_force.h \
                       ps_int.h \
                       ps_located.h \
                       ps_lod.h \
                       ps_mesh.h\
                       ps_misc.h \
                       ps_particle.h \
                       ps_particle2.h \
                       ps_particle_basic.h \
                       ps_plane_basis.h \
                       ps_plane_basis_maker.h \
                       ps_sound.h \
                       ps_util.h \
                       ps_zone.h \
                       ptr_set.h \
                       quad_effect.h \
                       quad_grid.h \
                       quad_grid_clip_cluster.h \
                       quad_grid_clip_manager.h \
                       register_3d.h \
                       render_trav.h \
                       root_model.h \
                       scene.h \
                       scene_group.h \
                       scene_user.h \
                       shader.h \
                       shape.h \
                       shape_bank.h \
                       shape_bank_user.h \
                       skeleton_model.h \
                       skeleton_shape.h \
                       skeleton_user.h \
                       skeleton_weight.h \
                       skip_model.h \
                       stripifier.h \
                       tess_block.h \
                       tess_face_priority_list.h \
                       tess_list.h \
                       tessellation.h \
                       text_context.h \
                       text_context_user.h \
                       texture.h \
                       texture_blank.h \
                       texture_blend.h \
                       texture_bump.h \
                       texture_cube.h \
                       texture_far.h \
                       texture_file.h \
                       texture_font.h \
                       texture_grouped.h \
                       texture_mem.h \
                       texture_near.h \
                       texture_user.h \
                       tile_bank.h \
                       tile_color.h \
                       tile_element.h \
                       tile_far_bank.h \
                       tile_lumel.h \
                       tile_noise_map.h \
                       tile_vegetable_desc.h \
                       track.h \
                       track_bezier.h \
                       track_keyframer.h \
                       track_tcb.h \
                       transform.h \
                       transform_shape.h \
                       transform_user.h \
                       transformable.h \
                       transformable_user.h \
                       trav_scene.h \
                       vegetable.h \
                       vegetable_blend_layer_model.h \
                       vegetable_clip_block.h \
                       vegetable_def.h \
                       vegetable_instance_group.h \
                       vegetable_manager.h \
                       vegetable_quadrant.h \
                       vegetable_shape.h \
                       vegetable_sort_block.h \
                       vegetablevb_allocator.h \
                       vertex_buffer.h \
                       vertex_buffer_hard.h \
                       vertex_program.h \
                       visual_collision_entity.h \
                       visual_collision_entity_user.h \
                       visual_collision_manager.h \
                       visual_collision_manager_user.h \
                       water_height_map.h \
                       water_model.h \
                       water_pool_manager.h \
                       water_shape.h \
                       zone.h \
                       zone_corner_smoother.h \
                       zone_lighter.h \
                       zone_manager.h \
                       zone_search.h \
                       zone_smoother.h \
                       zone_tgt_smoother.h \
                       anim_detail_trav.cpp \
                       animatable.cpp \
                       animated_lightmap.cpp \
                       animated_material.cpp \
                       animated_morph.cpp \
                       animated_value.cpp \
                       animation.cpp \
                       animation_playlist.cpp \
                       animation_set.cpp \
                       animation_set_user.cpp \
                       animation_time.cpp \
                       async_file_manager.cpp \
                       bezier_patch.cpp \
                       bone.cpp \
                       bone_user.cpp \
                       camera.cpp \
                       camera_user.cpp \
                       channel_mixer.cpp \
                       clip_trav.cpp \
                       cluster.cpp \
                       coarse_mesh_build.cpp \
                       coarse_mesh_manager.cpp \
                       computed_string.cpp \
                       deform_2d.cpp \
                       driver.cpp \
                       driver_user.cpp \
                       driver_user2.cpp \
                       dru.cpp \
                       event_mouse_listener.cpp \
                       fast_floor.cpp \
                       flare_model.cpp \
                       flare_shape.cpp \
                       font_generator.cpp \
                       font_manager.cpp \
                       frustum.cpp \
                       heat_haze.cpp \
                       height_map.cpp \
                       hrc_trav.cpp \
                       init_3d.cpp \
                       instance_group_user.cpp \
                       instance_material_user.cpp \
                       instance_user.cpp \
                       key.cpp \
                       landscape.cpp \
                       landscape_collision_grid.cpp \
                       landscape_def.cpp \
                       landscape_face_vector_manager.cpp \
                       landscape_model.cpp \
                       landscape_profile.cpp \
                       landscape_user.cpp \
                       landscape_vegetable_block.cpp \
                       landscapeig_manager.cpp \
                       landscapevb_allocator.cpp \
                       landscapevb_info.cpp \
                       light.cpp \
                       light_trav.cpp \
                       light_user.cpp \
                       load_balancing_trav.cpp \
                       material.cpp \
                       material_user.cpp \
                       mesh.cpp \
                       mesh_base.cpp \
                       mesh_base_instance.cpp \
                       mesh_geom.cpp \
                       mesh_instance.cpp \
                       mesh_morpher.cpp \
                       mesh_mrm.cpp \
                       mesh_mrm_instance.cpp \
                       mesh_multi_lod.cpp \
                       mesh_multi_lod_instance.cpp \
                       mini_col.cpp \
                       mot.cpp \
                       motion_blur.cpp \
                       mrm_builder.cpp \
                       mrm_internal.cpp \
                       mrm_mesh.cpp \
                       mrm_parameters.cpp \
                       nelu.cpp \
                       noise_value.cpp \
                       particle_system.cpp \
                       particle_system_instance_user.cpp \
                       particle_system_model.cpp \
                       particle_system_process.cpp \
                       particle_system_shape.cpp \
                       particle_system_sound_user.cpp \
                       patch.cpp \
                       patch_noise.cpp \
                       patch_rdr_pass.cpp \
                       patch_render.cpp \
                       patch_vegetable.cpp \
                       patchuv_locator.cpp \
                       play_list_manager.cpp \
                       play_list_manager_user.cpp \
                       play_list_user.cpp \
                       portal.cpp \
                       primitive_block.cpp \
                       primitive_profile.cpp \
                       ps_attrib_maker_bin_op.cpp \
                       ps_color.cpp \
                       ps_emitter.cpp \
                       ps_float.cpp \
                       ps_force.cpp \
                       ps_int.cpp \
                       ps_located.cpp \
                       ps_mesh.cpp \
                       ps_particle.cpp \
                       ps_particle2.cpp \
                       ps_particle_basic.cpp \
                       ps_plane_basis_maker.cpp \
                       ps_sound.cpp \
                       ps_util.cpp \
                       ps_zone.cpp \
                       ptr_set.cpp \
                       quad_effect.cpp \
                       quad_grid_clip_cluster.cpp \
                       quad_grid_clip_manager.cpp \
                       register_3d.cpp \
                       render_trav.cpp \
                       root_model.cpp \
                       scene.cpp \
                       scene_group.cpp \
                       scene_user.cpp \
                       scissor.cpp \
                       shader.cpp \
                       shape.cpp \
                       shape_bank.cpp \
                       shape_bank_user.cpp \
                       skeleton_model.cpp \
                       skeleton_shape.cpp \
                       skeleton_user.cpp \
                       skeleton_weight.cpp \
                       skip_model.cpp \
                       stripifier.cpp \
                       tess_block.cpp \
                       tess_face_priority_list.cpp \
                       tess_list.cpp \
                       tessellation.cpp \
                       text_context.cpp \
                       text_context_user.cpp \
                       texture.cpp \
                       texture_blank.cpp \
                       texture_blend.cpp \
                       texture_bump.cpp \
                       texture_cube.cpp \
                       texture_far.cpp \
                       texture_file.cpp \
                       texture_font.cpp \
                       texture_grouped.cpp \
                       texture_mem.cpp \
                       texture_near.cpp \
                       texture_user.cpp \
                       tile_bank.cpp \
                       tile_color.cpp \
                       tile_element.cpp \
                       tile_far_bank.cpp \
                       tile_lumel.cpp \
                       tile_noise_map.cpp \
                       tile_vegetable_desc.cpp \
                       track.cpp \
                       track_keyframer.cpp \
                       transform.cpp \
                       transform_shape.cpp \
                       transform_user.cpp \
                       transformable.cpp \
                       transformable_user.cpp \
                       vegetable.cpp \
                       vegetable_blend_layer_model.cpp \
                       vegetable_clip_block.cpp \
                       vegetable_def.cpp \
                       vegetable_instance_group.cpp \
                       vegetable_manager.cpp \
                       vegetable_quadrant.cpp \
                       vegetable_shape.cpp \
                       vegetable_sort_block.cpp \
                       vegetablevb_allocator.cpp \
                       vertex_buffer.cpp \
                       vertex_buffer_hard.cpp \
                       vertex_program.cpp \
                       viewport.cpp \
                       visual_collision_entity.cpp \
                       visual_collision_entity_user.cpp \
                       visual_collision_manager.cpp \
                       visual_collision_manager_user.cpp \
                       water_height_map.cpp \
                       water_model.cpp \
                       water_pool_manager.cpp \
                       water_shape.cpp \
                       zone.cpp \
                       zone_corner_smoother.cpp \
                       zone_lighter.cpp \
                       zone_manager.cpp \
                       zone_search.cpp \
                       zone_smoother.cpp \
                       zone_tgt_smoother.cpp

AM_CXXFLAGS          = -I$(top_srcdir)/src @FREETYPE_CFLAGS@

libnel3d_la_LIBADD   = @FREETYPE_LIBS@ -lc -ldl -lpthread

libnel3d_la_LDFLAGS  = -version-info @LIBTOOL_VERSION@


# End of Makefile.am

